fix layout bugs

--- a/src/components/adminpage/statistics/sales/sales.css
+++ b/src/components/adminpage/statistics/sales/sales.css
@@ -41,7 +41,7 @@ input::-webkit-input-placeholder {
 .selectRevenueBlock {
     display: flex;
     flex-direction: column;
-    width: 900px;
+    width: 910px;
     margin-bottom: 30px;
     box-shadow: 0 2px 0 rgba(90, 97, 105, .11), 0 4px 8px rgba(90, 97, 105, .12), 0 10px 10px rgba(90, 97, 105, .06), 0 7px 70px rgba(90, 97, 105, .1);
     border-radius: .625rem;
@@ -91,7 +91,8 @@ input::-webkit-input-placeholder {
     text-align: center;
 }
 
-.orderContent .select, .statistics .select {
+.orderContent .select,
+.statistics .select {
     /* border: none; */
     -webkit-appearance: none;
     -moz-appearance: none;
